# jaime_xor_perceptron

./: .gitignore  Cargo.toml  README.md
src/: main.rs  matrix.rs  neuronal_network.rs  neuronal_network_with_reminder.rs
